@@ -9,17 +9,13 @@ import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.util.function.Consumer;
 
-record DirFillerImpl(MemorySegment buf, fuse_fill_dir_t callback, Arena arena) implements DirFiller {
-
-	DirFillerImpl(MemorySegment buf, MemorySegment callback, Arena arena) {
-		this(buf, fuse_fill_dir_t.ofAddress(callback, arena), arena);
-	}
+record DirFillerImpl(MemorySegment buf, MemorySegment callback, Arena arena) implements DirFiller {
 
 	@Override
 	public int fill(String name, Consumer<Stat> statFiller, long offset, int flags) {
 		var statSegment = stat.allocate(arena);
 		statFiller.accept(new StatImpl(statSegment));
-		return callback.apply(buf, arena.allocateUtf8String(name), statSegment, offset, flags);
+		return fuse_fill_dir_t.invoke(callback, buf, arena.allocateFrom(name), statSegment, offset, flags);
 	}
 
 }
