@@ -86,7 +86,7 @@ public class FuseImplTest {
 			 var fuseH = Mockito.mockStatic(fuse_h.class)) {
 			fuseFunctionsClass.when(() -> FuseFunctions.fuse_parse_cmdline(Mockito.any(), Mockito.any())).then(invocation -> {
 				MemorySegment opts = invocation.getArgument(1);
-				fuse_cmdline_opts.show_help$set(opts, 1);
+				fuse_cmdline_opts.show_help(opts, 1);
 				return 0;
 			});
 			fuseH.when(() -> fuse_h.fuse_lib_help(Mockito.any())).thenAnswer(Answers.RETURNS_DEFAULTS);
@@ -103,9 +103,9 @@ public class FuseImplTest {
 			 var arena = Arena.ofConfined()) {
 			fuseFunctionsClass.when(() -> FuseFunctions.fuse_parse_cmdline(Mockito.any(), Mockito.any())).then(invocation -> {
 				MemorySegment opts = invocation.getArgument(1);
-				fuse_cmdline_opts.singlethread$set(opts, 0);
-				fuse_cmdline_opts.debug$set(opts, 1);
-				fuse_cmdline_opts.mountpoint$set(opts, arena.allocateUtf8String("/mount/point"));
+				fuse_cmdline_opts.singlethread(opts, 0);
+				fuse_cmdline_opts.debug(opts, 1);
+				fuse_cmdline_opts.mountpoint(opts, arena.allocateFrom("/mount/point"));
 				return 0;
 			});
 
@@ -129,7 +129,7 @@ public class FuseImplTest {
 		@DisplayName("flush(\"/foo\", fi)")
 		public void testFlush() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).flush(Mockito.eq("/foo"), Mockito.any());
 
@@ -143,7 +143,7 @@ public class FuseImplTest {
 		@DisplayName("fsync(\"/foo\", 1, fi)")
 		public void testFsync() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsync(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
@@ -157,7 +157,7 @@ public class FuseImplTest {
 		@DisplayName("fsyncdir(\"/foo\", 1, fi)")
 		public void testFsyncdir() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsyncdir(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
@@ -196,8 +196,8 @@ public class FuseImplTest {
 		@Test
 		public void testUtimensNow() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var fi = arena.allocate(fuse_file_info.$LAYOUT());
+				var path = arena.allocateFrom("/foo");
+				var fi = fuse_file_info.allocate(arena);
 				var times = MemorySegment.NULL;
 				Mockito.doReturn(42).when(fuseOps).utimens(Mockito.eq("/foo"), Mockito.argThat(TimeSpec::isUtimeNow), Mockito.argThat(TimeSpec::isUtimeNow), Mockito.any());
 
@@ -217,13 +217,13 @@ public class FuseImplTest {
 			Instant expectedATime = Instant.ofEpochSecond(sec0, nsec0);
 			Instant expectedMTime = Instant.ofEpochSecond(sec1, nsec1);
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var fi = arena.allocate(fuse_file_info.$LAYOUT());
+				var path = arena.allocateFrom("/foo");
+				var fi = fuse_file_info.allocate(arena);
 				var times = timespec.allocateArray(2, arena);
-				timespec.tv_sec$set(times, 0, sec0);
-				timespec.tv_nsec$set(times, 0, nsec0);
-				timespec.tv_sec$set(times, 1, sec1);
-				timespec.tv_nsec$set(times, 1, nsec1);
+				timespec.tv_sec(timespec.asSlice(times, 0), sec0);
+				timespec.tv_nsec(timespec.asSlice(times, 0), nsec0);
+				timespec.tv_sec(timespec.asSlice(times, 1), sec1);
+				timespec.tv_nsec(timespec.asSlice(times, 1), nsec1);
 				Mockito.doReturn(42).when(fuseOps).utimens(Mockito.eq("/foo"), Mockito.argThat(t -> expectedATime.equals(t.get())), Mockito.argThat(t -> expectedMTime.equals(t.get())), Mockito.any());
 
 				var result = fuseImpl.utimens(path, times, fi);
@@ -241,8 +241,8 @@ public class FuseImplTest {
 		@DisplayName("getxattr")
 		public void testGetxattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var name = arena.allocateUtf8String("bar");
+				var path = arena.allocateFrom("/foo");
+				var name = arena.allocateFrom("bar");
 				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).getxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any());
@@ -257,8 +257,8 @@ public class FuseImplTest {
 		@DisplayName("setxattr")
 		public void testSetxattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var name = arena.allocateUtf8String("bar");
+				var path = arena.allocateFrom("/foo");
+				var name = arena.allocateFrom("bar");
 				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).setxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any(), Mockito.anyInt());
@@ -273,7 +273,7 @@ public class FuseImplTest {
 		@DisplayName("listxattr")
 		public void testListxattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var list = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).listxattr(Mockito.eq("/foo"), Mockito.any());
@@ -288,8 +288,8 @@ public class FuseImplTest {
 		@DisplayName("removexattr")
 		public void testRemovexattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var name = arena.allocateUtf8String("bar");
+				var path = arena.allocateFrom("/foo");
+				var name = arena.allocateFrom("bar");
 
 				Mockito.doReturn(42).when(fuseOps).removexattr(Mockito.eq("/foo"), Mockito.eq("bar"));
 
@@ -305,7 +305,7 @@ public class FuseImplTest {
 	@DisplayName("chown")
 	public void testChown() {
 		try (var arena = Arena.ofConfined()) {
-			var path = arena.allocateUtf8String("/foo");
+			var path = arena.allocateFrom("/foo");
 			var fi = fuse_file_info.allocate(arena);
 			Mockito.doReturn(42).when(fuseOps).chown(Mockito.eq("/foo"), Mockito.eq(42), Mockito.eq(1337), Mockito.any());
 
